# kai-translation

./: .editorconfig  .eslintignore  .eslintrc.cjs  .gitignore  .prettierignore  .stylelintignore  build.yml  index.html  nginx.conf  package.json  pnpm-lock.yaml  uno.config.ts  vite.config.ts
.github/workflows/: release.yml
docs/: _coverpage.md  _navbar.md  index.html  nginx.conf  updater.json
docs/pages/: faq.md  usage.md  version_log.md
src/: App.tsx  main.tsx  move-binary.js  style.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  constant.rs  main.rs
src-tauri/src/crawler/: alibaba.rs  mod.rs
src/common/: constants.ts  event.ts  systemtray.ts
src/components/Accordion/: index.tsx
src/components/IconSpin/: index.tsx
src/components/Scrollbar/: index.tsx
src/components/Select/: index.tsx
src/components/ShortcutInput/: index.tsx
src/components/Switch/: index.tsx
src/hooks/: useAutoCopyHook.ts  useRandomId.ts  useSettingConfig.ts
src/services/innerTranslate/: alibaba.ts  deepl.ts  huoshan.ts  index.ts  types.ts
src/services/translate/: alibaba.ts  huoshan.ts
src/store/: global.ts  index.ts  setting.ts
src/theme/: color.ts  index.tsx  styled.d.ts
src/utils/: index.ts  monitor.ts  settings.ts
src/windows/About/: index.tsx
src/windows/Main/: index.tsx
src/windows/Main/_hook/: useAutoCopyHook.ts  useSetting.ts  useWindowHide.ts  useWindowVisible.ts
src/windows/Setting/: index.tsx
src/windows/Translate/: index.tsx
src/windows/Translate/_hook/: useAutoCopyHook.ts  useEnterTranslate.ts  useUnderlineTranslate.ts  useWindowHide.ts
