[package]
name = "zeus"
version = "0.0.1"
description = "A Tauri App"
authors = ["kevin"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "global-shortcut-all", "window-all", "macos-private-api", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11.20", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
rand_user_agent = "0.1.0"
anyhow = "1.0.75"
rdev = "0.5.3"
enigo = {git = "https://github.com/enigo-rs/enigo"}
mouse_position = "0.1.3"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
