[package]
name = "zeus"
version = "0.0.3"
description = "一个方便小巧的翻译软件"
authors = ["kevin"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "path-all", "os-all", "fs-all", "system-tray", "clipboard-all", "shell-sidecar", "global-shortcut-all", "window-all", "macos-private-api"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11.20", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
rand_user_agent = "0.1.0"
anyhow = "1.0.75"
rdev = "0.5.3"
enigo = {git = "https://github.com/enigo-rs/enigo"}
mouse_position = "0.1.3"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
