[package]
name = "kai"
version = "0.0.4"
description = "一个方便小巧的翻译软件"
authors = ["kevin"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "http-all", "http-multipart", "shell-open", "path-all", "os-all", "fs-all", "system-tray", "clipboard-all", "global-shortcut-all", "window-all", "macos-private-api"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rdev = "0.5.3"
mouse_position = "0.1.3"
whatlang = "0.16.3"
brotli2 = "0.3.2"
macos-accessibility-client = "0.0.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
